@@ -1,3 +1,8 @@
+2013-03-18  Donal K. Fellows  <dkf@users.sf.net>
+
+	* tests/cmdAH.test (cmdAH-19.12): [Bug 3608360]: Added test to ensure
+	that we never ever allow [file exists] to do globbing.
+
 2013-03-12  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tcl.m4: Patch by Andrew Shadura, providing better support for
